fix: jump links display below nav and h2 tags larger on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,6 +21,8 @@ body {
   color: yellow;
 }
 
+#modeling, #fitness:target { scroll-margin-top: 50px; }
+
 .header--hr-centered {
   display: flex;
   width: 100%;
